syntax = "proto3";

package nupi.api.v1;

option go_package = "github.com/nupi-ai/nupi/internal/api/grpc/v1;v1";

import "google/protobuf/timestamp.proto";

// Recording describes a terminal session recording (asciicast format).
message Recording {
  string session_id = 1;
  string filename = 2;
  string command = 3;
  repeated string args = 4;
  string work_dir = 5;
  google.protobuf.Timestamp start_time = 6;
  double duration_sec = 7;     // Duration in seconds
  uint32 rows = 8;
  uint32 cols = 9;
  string title = 10;
  string tool = 11;            // Detected AI tool
  string recording_path = 12;  // Absolute path to .cast file
}

// ListRecordingsRequest asks for recording metadata, optionally filtered by session.
message ListRecordingsRequest {
  string session_id = 1; // optional filter
}

// ListRecordingsResponse returns the list of recordings.
message ListRecordingsResponse {
  repeated Recording recordings = 1;
}

// GetRecordingRequest starts streaming the raw recording file for a session.
message GetRecordingRequest {
  string session_id = 1;
}

// RecordingChunk carries a segment of the recording file data.
message RecordingChunk {
  bytes data = 1;
  uint64 sequence = 2;
  map<string, string> metadata = 3;
}
